--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,10 +5,7 @@ site_name: Dart and Flutter Developers Guide
 site_url: https://dartandflutter.ar
 site_author: Sebastian Larrauri
 site_description: >-
-  Dart And Flutter Developer Guide es un repositorio de 
-  código abierto que proporciona una guía detallada 
-  para desarrolladores interesados en el lenguaje de programación 
-  Dart y el framework de desarrollo de aplicaciones móviles Flutter. 
+  Una guía detallada para el desarrollo de  aplicaciones Dart y Flutter. 
 
 # Repository
 repo_name: slarrauri/Dart-And-Flutter-Developer-Guide
