--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,3 +140,9 @@ nav:
     - Dart: atajos/dart.md
     - Flutter: atajos/flutter.md
   - Agradecimientos: agradecimientos/index.md
+  
+  # TODO
+  # Programación las Bases
+  # Git
+  # Docker
+  # SOLID CLEAN CODE
