--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "Dartpad",
+        "dinámicamente",
         "encapsulación",
         "Interoperabilidad",
+        "pokemon",
         "tipado",
         "Tipado"
     ]
