fix: random stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "dinámicamente",
         "encapsulación",
         "Interoperabilidad",
+        "mkdocs",
+        "Mkdocs",
         "pokemon",
         "tipado",
         "Tipado"
