--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,14 +2,14 @@
 
 # Project information
 site_name: Dart and Flutter Developers Guide
-site_url: https://slarrauri.github.io/Dart-And-Flutter-Developer-Guide/
+site_url: https://dartandflutter-ar.github.io/Dart-And-Flutter-Developer-Guide/
 site_author: Sebastian Larrauri
 site_description: >-
   Una guía detallada para el desarrollo de  aplicaciones Dart y Flutter. 
 
 # Repository
 repo_name: Dart-And-Flutter-Developer-Guide
-repo_url: https://github.com/slarrauri/Dart-And-Flutter-Developer-Guide
+repo_url: https://dartandflutter-ar.github.io/Dart-And-Flutter-Developer-Guide/
 
 # Copyright
 copyright: Copyright &copy; 2023 Sebastian Larrauri
