--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,7 +148,7 @@ nav:
     - atajos/index.md
     - Dart: atajos/dart.md
     - Flutter: atajos/flutter.md
-  - Agradecimientos: agradecimientos/index.md
+  - Créditos: creditos/index.md
   
   # TODO
   # Programación las Bases
