add: hola mundo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
         "dinámicamente",
         "encapsulación",
         "Interoperabilidad",
+        "Larrauri",
         "mkdocs",
         "Mkdocs",
         "pokemon",
+        "Reartes",
         "sublist",
         "tipado",
         "Tipado"
