--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,15 +46,15 @@ theme:
     - scheme: slate
       primary: indigo
       accent: indigo
-      toggle:
-        icon: material/brightness-7
-        name: Switch to light mode
-    - scheme: default
-      primary: indigo
-      accent: indigo
-      toggle:
-        icon: material/brightness-4
-        name: Switch to dark mode
+    #   toggle:
+    #     icon: material/brightness-7
+    #     name: Switch to light mode
+    # - scheme: default
+    #   primary: indigo
+    #   accent: indigo
+    #   toggle:
+    #     icon: material/brightness-4
+    #     name: Switch to dark mode
   font:
     text: Roboto
     code: Roboto Mono
@@ -86,6 +86,8 @@ extra:
   #     link: https://github.com/slarrauri
   #   - icon: fontawesome/brands/twitter
   #     link: https://twitter.com/slarrauri
+extra_css:
+  - stylesheets/extra.css
 
 # Extensions
 markdown_extensions:
@@ -146,7 +148,7 @@ nav:
   - Flutter:
     - Que es Flutter: flutter/que_es_flutter.md
     - Primeros Pasos: 
-      - Indice: flutter/primeros_pasos/indice.md
+      - flutter/primeros_pasos/index.md
       - Estructura: flutter/primeros_pasos/directorios_y_archivos.md
       - Hola Mundo: flutter/primeros_pasos/hola_mundo.md
   # - Docker: 
