--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: ci 
+name: ci
 on:
   push:
     branches:
-      - master 
+      - master
       - main
 permissions:
   contents: write
@@ -14,10 +14,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
-          key: ${{ github.ref }}
+          key: mkdocs-material-${{ github.ref }}
           path: .cache
+          restore-keys: |
+            mkdocs-material-
       - run: pip install mkdocs-material
       - run: pip install mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
